--- a/initial/ui/build.gradle
+++ b/initial/ui/build.gradle
@@ -5,5 +5,6 @@ plugins {
 npm_start {
   execOverrides {
     it.environment << [HOST: '127.0.0.1']
+    it.environment << [DEBUG: 'express:router']
   }
 }
