--- a/initial/ui/package.json
+++ b/initial/ui/package.json
@@ -30,7 +30,9 @@
     ]
   },
   "devDependencies": {
+    "bootstrap": "^4.3.1",
     "react-redux": "^7.1.0",
+    "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
     "uuid": "^3.3.2"
   }
