--- a/initial/ui/package.json
+++ b/initial/ui/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^7.1.0",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   }
 }
