--- a/initial/backend/build.gradle
+++ b/initial/backend/build.gradle
@@ -27,6 +27,12 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-jdbc")
+    compile("org.springframework:spring-jdbc")
+    implementation('org.postgresql:postgresql')
     testCompile("junit:junit")
+
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
 }
 
