--- a/initial/backend/src/main/resources/application.properties
+++ b/initial/backend/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=8080
 server.address=127.0.0.1
 server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.directory=/var/log/tomcat
+
+spring.datasource.platform=postgres
+spring.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/rwhitworth
+spring.datasource.username=rwhitworth
+spring.datasource.password=root
