--- a/initial/ui/package.json
+++ b/initial/ui/package.json
@@ -35,6 +35,9 @@
     "react-redux": "^7.1.0",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   }
