added delay filter
also print command line args

--- a/initial/backend/build.gradle
+++ b/initial/backend/build.gradle
@@ -75,6 +75,14 @@ bootJar {
   from sourceSets.addWith.output
 }
 
+bootRun {
+  if (project.hasProperty('args')) {
+    args project.args.split(',')
+    println "set args - "
+    println project.args.split(',')
+  }
+}
+
 task addWith () {
   dependsOn compileJava
   inputs.files(compileJava.outputs.getFiles().getAsFileTree().matching{ include "**/*Build*" })
